# rust-grpc-diesel-sample

./: Cargo.toml  Makefile  README.md  build.rs
proto/: common.proto  photo.proto  post.proto  user.proto
src/: errors.rs  external.rs  main.rs
src/rpc/: photo.rs  prefecture.rs  user.rs
