[package]
name = "rust-grpc-sample"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.0.1"
prost = "0.8.0"
prost-derive = "0.8.0"
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.5.0"
tonic-reflection = "0.2.0"

[build-dependencies]
tonic-build  = "0.5.0"
